packages/tree-sitter/typedown-md/typedown-md/test/corpus/containers/nested.txt
================
Container containing a list
================

::: note
- item one
- item two
:::

---

(document
  (section
    (container_block
      (container_block_delimiter)
      type: (container_type)
      (list
        (list_item
          (list_marker_minus)
          (paragraph
            (inline)))
        (list_item
          (list_marker_minus)
          (paragraph
            (inline))))
      (container_block_delimiter))))
